<resources>
    <string name="app_name">D.A.D.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_ul"><u>Cancel</u></string>
    <string name="next">NEXT</string>
    <string name="update">UPDATE</string>
    <string name="settings">SETTINGS</string>
    <string name="loading">Loading&#8230;</string>
    <string name="alert_some_error">An error occurred, please try again later</string>
    <string name="alert_something_wrong">Something went wrong, please try again later</string>
    <string name="alert_network_error">Network error, please try again later</string>
    <string name="alert_check_connection">Please check you connection and try again</string>
    <string name="alert_check_gps">Geolocation is turned OFF. Please turn it ON.</string>
    <string name="alert_max_upload_image_size">Uploaded files must be less than 10MB</string>
    <string name="alert_invalid_credentials">Username or Password is invalid.</string>
    <string name="alert_invalid_login">Email or Password is invalid.</string>
    <string name="alert_not_registered">No account is associated with this Email ID, Please enter valid email ID or Register new account.</string>
    <string name="alert_valid_email">Enter Valid Email ID.</string>
    <string name="alert_password_required">Please enter password to login in account.</string>
    <string name="alert_"></string>
    <string name="alert_forgot_password_success">A temporary password has been sent to your registered email ID.</string>
    <string name="forgor_password_email_not_found">No account is associated with this Email ID, Please enter valid email ID or Register new account.</string>
    <string name="alert_forgot_password_error">There was an problem to sending email. Please try again or later.</string>
    <string name="fragment_registration_first_time_user">First Time User ?</string>
    <string name="fragment_registration_create_account">"<u>Create Account</u>"</string>
    <string name="fragment_registration_setting_up_another_device">Setting Up another device ?</string>
    <string name="fragment_registration_login_to_your_account">"<u>Login To Your Account</u>"</string>
    <string name="fragment_registration_show_eula">"<u>Show EULA</u>"</string>
    <string name="your_string_here">This is an <u>underline</u>.</string>
    <string name="sample"> <u>your data</u></string>
    <string name="fragment_login_to_your_tv_remember_me">"<u>Remember Me</u>"</string>
    <string name="fragment_login_to_your_tv_login">"<u>Login</u>"</string>
    <string name="fragment_login_to_your_et_hint_pwd">Password</string>
    <string name="fragment_login_to_your_et_hint_user_name">User Name</string>
    <string name="fragment_login_to_your_tv_forgot_pws">"<u>Forgot Password</u>"</string>
    <string name="fragment_login_to_your_tv_title_login_credentials">Login Credentials</string>
    <string name="TAG_VALID_USERNAME">Email is required.</string>
    <string name="TAG_VALID_PASSWORD">Password is required.</string>
    <string name="TAG_OK">OK</string>
    <string name="TAG_INTERNET_AVAILABILITY">Please check internet connectivity.</string>
    <string name="hello_images">HelloImages</string>
    <string name="date_formate">yyyyMMdd_HHmmss</string>
    <string name="img_name">IMG_</string>
    <string name="img_extension">.jpg</string>
    <string name="file_url">file_uri</string>
    <string name="fragment_create_account_tv_cancel">Cancel</string>
    <string name="fragment_create_account_tv_new_account">New Account</string>
    <string name="fragment_create_account_tv_save">Save</string>
    <string name="fragment_create_account_tv_check_entries">"Check Enteries"</string>
    <string name="fragment_create_account_tv_show">"<u>Show</u>"</string>
    <string name="fragment_registration_create_tv_hide">"<u>Hide</u>"</string>
    <string name="fragment_create_account_tv_hint_user_name"><i>Enter the name your contacts know you by.</i></string>
    <string name="fragment_create_account_custom_et_phone_no_hint">Phone No</string>
    <string name="fragment_create_account_custom_tv_phone_no_hint"><i>phone number where you want to receive crowd text alerts from other D.A.D users</i></string>
    <string name="fragment_create_account_custom_tv_email_id_hint"><i>Your email will be your Login username, and will receive password and pin reset requests</i></string>
    <string name="fragment_create_account_custom_et_email_id">Email ID</string>
    <string name="fragment_create_account_et_user_name">User Name</string>
    <string name="fragment_login_to_your_account_et_pwd">Password</string>
    <string name="fragment_login_to_your_account_tv_pwd_hint"><i>We recommend 7 characters using numbers, upper and lowercase letters. HOWEVER we only enforce 7 character minimum</i></string>
    <string name="fragment_login_to_your_account_et_re_password">Re Enter Password</string>
    <string name="fragment_login_to_your_account_tv_re_password_hint"><i>Enter the password again to verify correct typing</i></string>
    <string name="TAG_FIRSTNAME_EMPTYMSG">User name is required.</string>
    <string name="TAG_PHONE_NO_EMPTYMSG">Phone no is required.</string>
    <string name="TAG_EMAIL_ID">Email is required.</string>
    <string name="TAG_PASSWORD_EMPTYMSG">Must enter password.</string>
    <string name="TAG_RE_PASSWORD_EMPTYMSG">Must enter re-enter password.</string>
    <string name="TAG_PWD_RE_PWD_EMPTYMSG">Password and Re-enter password mismatch.Please enter same values for both.</string>
    <string name="TAG_PIN_RE_PIN_EMPTYMSG">New Pin and Confirm Pin mismatch.Please enter same values for both.</string>
    <string name="TAG_PIN_OLD_PIN_EMPTYMSG">Please enter correct value for Old Pin.</string>
    <string name="TAG_ENTER_VALID_EMAIL">Enter valid email.</string>
    <string name="TAG_PASSWORD_LENGTHMSG">Minimum enter 7 character for Password.</string>
    <string name="TAG_RESETPASSWORD_TXT">Reset Password</string>
    <string name="TAG_PHONE_NO_Valid_NO">Enter Valid Number</string>
    <string name="TAG_PHONE_NO_MIN_TEN_MSG">Enter 10 Digit Number.</string>
    <string name="account_created">\"Your Account Is created\"</string>
    <string name="account_updated">\"Your Account Is updated\"</string>
    <string name="reday_to_use">You are ready to use D.A.D</string>
    <string name="dashbord_contact">Contact</string>
    <string name="dashbord_alert">Alert</string>
    <string name="dashbord_account">Account</string>
    <string name="dashbord_i_m_ok">I"'"m OK</string>
    <string name="fragment_terms_and_condition_cb_accept_license">"<u>Accept</u>"</string>
    <string name="fragment_terms_and_condition_cb_not_accept_license">"<u>I do NOT accept license</u>"</string>
    <string name="eula_title">Eula Not Accepted</string>
    <string name="accepentance_notice">The EULA must be accepted to use this app.if you do not want to accept the EULA please qute the app.Otherwise you will be returned to the EULA screen.</string>
    <string name="fragment_contact_tv_title">Contacts</string>
    <string name="fragment_dad_licence_tv_title">D.A.D. License</string>
    <string name="fragment_contact_tv_restore_from_the_server">Restore From The Server</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="fragment_i_am_ok_msg">A Pin is required before you can send an I m ok message.Please Create a PIN: </string>
    <string name="fragment_create_account_tv_reset_pin">"<u>Reset PIN</u>"</string>
    <string name="fragment_create_account_tv_forgot_pin">"<u>Forgot PIN</u>"</string>
    <string name="fragment_i_am_et_hint_pin">New PIN</string>
    <string name="fragment_i_am_et_hint_confirm_pin">Confirm PIN</string>
    <string name="fragment_account_tv_title">Account</string>
    <string name="logout"><u>Logout</u></string>
    <string name="fragment_login_to_your_et_hint_email_id">Email</string>
    <string name="fragment_change_password_tv_title">Change Password</string>
    <string name="fragment_change_password_et_old_password">Old Password</string>
    <string name="fragment_change_password_et_new_password_hint">New Password</string>
    <string name="fragment_change_password_et_confirm_password_hint">Confirm Password</string>
    <string name="fragment_change_password_btn_Save">Save</string>
    <string name="old_pwd">Enter Old Password</string>
    <string name="new_pwd">Enter New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="same_value">Enter the same value.</string>
    <string name="pwd_change_msg">Password has been changes successfully.</string>
    <string name="valid_msg">Enter min 7 character with single digit and single special character.</string>
    <string name="fragment_edit_profile_tv_title">Edit Account</string>
    <string name="fragment_edit_profil_tv_save">Save</string>
    <string name="fragment_edit_profile_msg">Enter the name your contacts known by you.</string>
    <string name="fragment_edit_profile_tv_phone_alert_msg">Phome number where you want to receive crowd text alerts from the other D.A.D users.</string>
    <string name="fragment_edit_profile_title_Password">Password.</string>
    <string name="fragment_edit_profile_title_password_update">Password Update</string>
    <string name="fragment_edit_profile_title_Current">Current</string>
    <string name="fragment_edit_profile_title_new">New</string>
    <string name="fragment_edit_profile_title_confirm">Confirm Password</string>
    <string name="fragment_edit_profile_et_current_hint">Current Password</string>
    <string name="fragment_edit_profile_new_hint">New Password</string>
    <string name="fragment_edit_profile_title_forgot_password">"<u>Forgot Password</u>"</string>
    <string name="fragment_create_account_et_user_ph_no">Mobile Number</string>
    <string name="fragment_create_pin_et_new_pin_hint">New Pin</string>
    <string name="fragment_create_pin_et_confirm_pin_hint">Confirm PIN</string>
    <string name="fragment_create_pin_btn_save">Save</string>
    <string name="fragment_create_pin_tv_title">Create PIN</string>
    <string name="fragment_change_password_tv_cancel">Cancel</string>
    <string name="fragment_i_m_ok_et_new_pin_hint">Old/temp Pin</string>
    <string name="fragment_i_m_ok_et_confirm_pin_hint">reenter Pin</string>
    <string name="fragment_i_m_ok_tv_reset_pin"><u>Reset PIN</u>"</string>
    <string name="fragment_i_m_ok_tv_forgot_pin"><u>Forgot PIN</u>"</string>
    <string name="fragment_i_m_ok_tv_validate_pin">Validate PIN:</string>
    <string name="fragment_i_m_ok_tv_save_pin">Save PIN</string>
    <string name="send_i_m_ok_message"><u>Send I\'m OK Message</u></string>
    <string name="pin_required">A PIN is required before you can send an I\'m ok message. Please create a PIN:</string>
    <string name="old_temporary_pin">Old/Temporary Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="edit_account"><u>Edit Account</u></string>
    <string name="need_to_change_your_name_phone_or_password">Need to Change your Name, Phone or Password?</string>
    <string name="TAG_FORGOT_PIN">Forgot Pin !!</string>
    <string name="TAGE_REQUIRE_PIN">A PIN is required before you can send an i\'m ok message. Please create PIN :</string>
    <string name="TAGE_NEW_PIN">New PIN:</string>
    <string name="TAGE_CONFIRM_PIN">Confirm PIN:</string>
    <string name="TAG_RESEt_PIN">Reset PIN:</string>
    <string name="TAG_VALIDATE_PIN">Validate PIN</string>
    <string name="TAG_SAVE_PIN">SAVE PIN</string>
    <string name="build_no">%1$d build:%2$s </string>
</resources>