<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/fragment_registration_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_registration_tv_build_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/build_no"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/test" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_registration_iv_logo">

        <TextView
            android:id="@+id/fragment_registration_tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_registration_tv_first_time_user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/fragment_registration_create_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_registration_tv_setting_up_another_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_registration_tv_login_to_your_account"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/fragment_registration_setting_up_another_device"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_registration_tv_show_eula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/fragment_registration_show_eula"
            android:textColor="@color/colorInckLight"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_registration_tv_first_time_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/fragment_registration_first_time_user"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_registration_tv_login_to_your_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_registration_tv_show_eula"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/fragment_registration_login_to_your_account"
            android:textColor="@color/colorParot"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
