<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_settings_iv_logo">

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:id="@+id/fragment_settings_tvEditAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_settings_tvMsg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/edit_account"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/_15sdp" />

        <net.tigerlight.dad.util.CustomTextViewBold
            android:id="@+id/fragment_settings_tv_setting_up_another_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_settings_tvLogin"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/fragment_registration_setting_up_another_device"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_17sdp" />

        <net.tigerlight.dad.util.CustomTextViewBold
            android:id="@+id/fragment_settings_tvShowEula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/fragment_registration_show_eula"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/_15sdp" />

        <net.tigerlight.dad.util.CustomTextViewBold
            android:id="@+id/fragment_settings_tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/logout"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/_15sdp" />

        <net.tigerlight.dad.util.CustomTextViewBold
            android:id="@+id/fragment_settings_tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <net.tigerlight.dad.util.CustomTextViewBold
            android:id="@+id/fragment_settings_tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_settings_tvShowEula"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/fragment_registration_login_to_your_account"
            android:textColor="@color/colorParot"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:id="@+id/fragment_settings_tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fragment_settings_tvWelcome"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/need_to_change_your_name_phone_or_password"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical">

        <net.tigerlight.dad.util.CustomTextViewSemiBold
                android:id="@+id/tvBuild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_no"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_20sdp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/test" />

    </LinearLayout>

</RelativeLayout>
